--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -8,10 +8,6 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    font-family: 'Lato', sans-serif;
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Oswald', sans-serif;
     font-family: 'Raleway', sans-serif;
     font-family: 'Open Sans', sans-serif;
 }
@@ -182,4 +178,35 @@ li.nav-item {
 
 #footer-bottom {
     margin-top: 20px;
+}
+
+
+/********************************************************************
+  Breakpoint xl
+ ********************************************************************/
+@media (max-width: 1200px) {
+
+}
+
+/********************************************************************
+  Breakpoint lg
+ ********************************************************************/
+@media (max-width: 992px) {
+    body > main {
+        max-width: 100%;
+    }
+}
+
+/********************************************************************
+  Breakpoint md
+ ********************************************************************/
+@media screen and (max-width: 768px) {
+
+}
+
+/********************************************************************
+  Breakpoint sm
+ ********************************************************************/
+@media (max-width: 576px) {
+
 }
