Account stuff impl

--- a/app/components/login/passwordRecovery.html
+++ b/app/components/login/passwordRecovery.html
@@ -1,27 +1,21 @@
-<section ng-controller="LoginController as vm">
+<section ng-controller="PasswordRecoveryController as vm">
     <section class="login-container card">
         <header class="login-header">
-            Sign In
+            Recover Password
         </header>
         <section class="login-body form-group">
-            <p class="error-message-container" ng-show="vm.ErrorMessages && vm.ErrorMessages.length > 0">
-            <span class="error-message"
-                  ng-repeat="message in vm.ErrorMessages">
-                <span ng-show="message.startsWith('-')" class="indent"></span> {{message}} <br>
-            </span>
+            <h5 class="m-b-40">We'll send you a link to reset your password</h5>
+            <p class="error-message-container m-b-20" ng-show="vm.ErrorMessages && vm.ErrorMessages.length > 0">
+                <span class="error-message"
+                      ng-repeat="message in vm.ErrorMessages">
+                    <span ng-show="message.startsWith('-')" class="indent"></span> {{message}} <br>
+                </span>
             </p>
-            <form ng-submit="vm.Login()">
+            <form ng-submit="vm.RecoverPassword()">
                 <input type="email"
                        placeholder="Email Address"
-                       class="login-input form-control"
-                       ng-model="vm.EmailAddress"/>
-                <input type="password"
-                       placeholder="Password"
-                       class="login-input form-control"
-                       ng-model="vm.Password"/>
-                <p class="recover-password">
-                    <a ui-sref="login-recover">Forgot Password?</a>
-                </p>
+                       class="login-input form-control m-b-20"
+                       ng-model="vm.EmailAddressToRecover"/>
                 <button class="btn btn-primary"
                         type="button"
                         ng-show="vm.Loading"
@@ -32,7 +26,7 @@
                 <button class="btn btn-secondary-alt btn-login"
                         type="submit"
                         ng-hide="vm.Loading">
-                    Sign In
+                    Recover Password
                 </button>
             </form>
         </section>
@@ -45,7 +39,4 @@
             </p>
         </footer>
     </section>
-
-
-
 </section>
