--- a/app/components/login/login.html
+++ b/app/components/login/login.html
@@ -1,6 +1,6 @@
 <section ng-controller="LoginController as vm">
     <section class="login-container card">
-        <header class="login-header">
+        <header>
             Sign In
         </header>
         <section class="login-body form-group">
