Modal directive, account password reset UI

--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -252,6 +252,11 @@ span.indent {
     display: inline-block;
 }
 
+#account-details-container {
+    width: 80%;
+    margin: auto;
+}
+
 
 /********************************************************************
   Breakpoint xl
