--- a/app/components/login/login.html
+++ b/app/components/login/login.html
@@ -34,6 +34,12 @@
                         ng-hide="vm.Loading">
                     Sign In
                 </button>
+                <div class="form-group recover-password m-top-10">
+                    <label for="remember-me">Remember Me</label>
+                    <input type="checkbox" id="remember-me"
+                           class=""
+                           ng-model="vm.RememberMe"/>
+                </div>
             </form>
         </section>
         <footer class="login-footer">
