--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -252,9 +252,10 @@ span.indent {
     display: inline-block;
 }
 
-#account-details-container {
-    width: 80%;
+#account-page {
+    max-width: 800px;
     margin: auto;
+    padding: 15px;
 }
 
 
